tests/suppress_unused_lazy/type_error.js
// @flow

// dependent of b with errors

import {b} from './b';

(123: string); // error
